Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/USceneCaptureComponentCube.h

	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CaptureScene(USceneCaptureComponentCube* Self)
	{
		Self->CaptureScene();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CaptureSceneDeferred(USceneCaptureComponentCube* Self)
	{
		Self->CaptureSceneDeferred();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnRegister(USceneCaptureComponentCube* Self)
	{
		Self->OnRegister();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_SendRenderTransform_Concurrent(USceneCaptureComponentCube* Self)
	{
		Self->SendRenderTransform_Concurrent();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_UpdateContent(USceneCaptureComponentCube* Self)
	{
		Self->UpdateContent();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnUnregister(USceneCaptureComponentCube* Self)
	{
		Self->OnUnregister();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_InvalidateLightingCacheDetailed(USceneCaptureComponentCube* Self, bool bInvalidateBuildEnqueuedLighting, bool bTranslationOnly)
	{
		auto _p0 = bInvalidateBuildEnqueuedLighting;
		auto _p1 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsActive(USceneCaptureComponentCube* Self)
	{
		return Self->IsActive();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsEditorOnly(USceneCaptureComponentCube* Self)
	{
		return Self->IsEditorOnly();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsNameStableForNetworking(USceneCaptureComponentCube* Self)
	{
		return Self->IsNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsNavigationRelevant(USceneCaptureComponentCube* Self)
	{
		return Self->IsNavigationRelevant();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsReadyForOwnerToAutoDestroy(USceneCaptureComponentCube* Self)
	{
		return Self->IsReadyForOwnerToAutoDestroy();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsSupportedForNetworking(USceneCaptureComponentCube* Self)
	{
		return Self->IsSupportedForNetworking();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_MarkAsEditorOnlySubobject(USceneCaptureComponentCube* Self)
	{
		Self->MarkAsEditorOnlySubobject();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_NeedsLoadForClient(USceneCaptureComponentCube* Self)
	{
		return Self->NeedsLoadForClient();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_NeedsLoadForEditorGame(USceneCaptureComponentCube* Self)
	{
		return Self->NeedsLoadForEditorGame();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_NeedsLoadForServer(USceneCaptureComponentCube* Self)
	{
		return Self->NeedsLoadForServer();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnActorEnableCollisionChanged(USceneCaptureComponentCube* Self)
	{
		Self->OnActorEnableCollisionChanged();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnComponentCreated(USceneCaptureComponentCube* Self)
	{
		Self->OnComponentCreated();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnCreatePhysicsState(USceneCaptureComponentCube* Self)
	{
		((E_PROTECTED_WRAP_USceneCaptureComponentCube*)Self)->OnCreatePhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnDestroyPhysicsState(USceneCaptureComponentCube* Self)
	{
		((E_PROTECTED_WRAP_USceneCaptureComponentCube*)Self)->OnDestroyPhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PostInitProperties(USceneCaptureComponentCube* Self)
	{
		Self->PostInitProperties();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PostLoad(USceneCaptureComponentCube* Self)
	{
		Self->PostLoad();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PostRename(USceneCaptureComponentCube* Self, UObject* OldOuter, char* OldName)
	{
		auto _p0 = OldOuter;
		auto _p1 = ConvertFromManage_FName(OldName);
		Self->PostRename(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_RegisterComponentTickFunctions(USceneCaptureComponentCube* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		Self->RegisterComponentTickFunctions(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_RemoveTickPrerequisiteActor(USceneCaptureComponentCube* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_RemoveTickPrerequisiteComponent(USceneCaptureComponentCube* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_RequiresGameThreadEndOfFrameRecreate(USceneCaptureComponentCube* Self)
	{
		return Self->RequiresGameThreadEndOfFrameRecreate();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_RequiresGameThreadEndOfFrameUpdates(USceneCaptureComponentCube* Self)
	{
		return Self->RequiresGameThreadEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_SendRenderDynamicData_Concurrent(USceneCaptureComponentCube* Self)
	{
		((E_PROTECTED_WRAP_USceneCaptureComponentCube*)Self)->SendRenderDynamicData_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_SetActive(USceneCaptureComponentCube* Self, bool bNewActive, bool bReset)
	{
		auto _p0 = bNewActive;
		auto _p1 = bReset;
		Self->SetActive(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_SetAutoActivate(USceneCaptureComponentCube* Self, bool bNewAutoActivate)
	{
		auto _p0 = bNewAutoActivate;
		Self->SetAutoActivate(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_SetComponentTickEnabled(USceneCaptureComponentCube* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_SetComponentTickEnabledAsync(USceneCaptureComponentCube* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabledAsync(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_ShouldActivate(USceneCaptureComponentCube* Self)
	{
		return ((E_PROTECTED_WRAP_USceneCaptureComponentCube*)Self)->ShouldActivate_WRAP();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_ShouldCreatePhysicsState(USceneCaptureComponentCube* Self)
	{
		return Self->ShouldCreatePhysicsState();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_ToggleActive(USceneCaptureComponentCube* Self)
	{
		Self->ToggleActive();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_UninitializeComponent(USceneCaptureComponentCube* Self)
	{
		Self->UninitializeComponent();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_AreNativePropertiesIdenticalTo(USceneCaptureComponentCube* Self, UObject* Other)
	{
		auto _p0 = Other;
		return Self->AreNativePropertiesIdenticalTo(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CheckDefaultSubobjectsInternal(USceneCaptureComponentCube* Self)
	{
		return Self->CheckDefaultSubobjectsInternal();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_FinishDestroy(USceneCaptureComponentCube* Self)
	{
		Self->FinishDestroy();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetDesc(USceneCaptureComponentCube* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDesc());
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_GetDetailedInfoInternal(USceneCaptureComponentCube* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDetailedInfoInternal());
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsAsset(USceneCaptureComponentCube* Self)
	{
		return Self->IsAsset();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsFullNameStableForNetworking(USceneCaptureComponentCube* Self)
	{
		return Self->IsFullNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsLocalizedResource(USceneCaptureComponentCube* Self)
	{
		return Self->IsLocalizedResource();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsPostLoadThreadSafe(USceneCaptureComponentCube* Self)
	{
		return Self->IsPostLoadThreadSafe();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsReadyForFinishDestroy(USceneCaptureComponentCube* Self)
	{
		return Self->IsReadyForFinishDestroy();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_IsSafeForRootSet(USceneCaptureComponentCube* Self)
	{
		return Self->IsSafeForRootSet();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_Modify(USceneCaptureComponentCube* Self, bool bAlwaysMarkDirty)
	{
		auto _p0 = bAlwaysMarkDirty;
		return Self->Modify(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_NotifyObjectReferenceEliminated(USceneCaptureComponentCube* Self)
	{
		Self->NotifyObjectReferenceEliminated();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PostCDOContruct(USceneCaptureComponentCube* Self)
	{
		Self->PostCDOContruct();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PostEditImport(USceneCaptureComponentCube* Self)
	{
		Self->PostEditImport();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PostSaveRoot(USceneCaptureComponentCube* Self, bool bCleanupIsRequired)
	{
		auto _p0 = bCleanupIsRequired;
		Self->PostSaveRoot(_p0);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_PreDestroyFromReplication(USceneCaptureComponentCube* Self)
	{
		Self->PreDestroyFromReplication();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_ShutdownAfterError(USceneCaptureComponentCube* Self)
	{
		Self->ShutdownAfterError();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_AddToCluster(USceneCaptureComponentCube* Self, UObjectBaseUtility* ClusterRootOrObjectFromCluster, bool bAddAsMutableObject)
	{
		auto _p0 = ClusterRootOrObjectFromCluster;
		auto _p1 = bAddAsMutableObject;
		Self->AddToCluster(_p0, _p1);
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CanBeClusterRoot(USceneCaptureComponentCube* Self)
	{
		return Self->CanBeClusterRoot();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CanBeInCluster(USceneCaptureComponentCube* Self)
	{
		return Self->CanBeInCluster();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_CreateCluster(USceneCaptureComponentCube* Self)
	{
		Self->CreateCluster();
	}
	DOTNET_EXPORT auto E_USceneCaptureComponentCube_OnClusterMarkedAsPendingKill(USceneCaptureComponentCube* Self)
	{
		Self->OnClusterMarkedAsPendingKill();
	}